<resources>
    <string name="app_name">Atelierul Digital</string>
    <string name="orange_textView">This is an orange TextView</string>
    <string name="green_textView">This is a green TextView</string>
    <string name="blue_textView">This is a blue TextView</string>
    <string name="button_string">This is a button</string>
    <string name="editText_hint_1">This is an EditText</string>
    <string name="editText_hint2">This is a new EditText</string>
    <string name="notify_me">Notify me:)</string>
    <string name="auto_backup">Auto backup</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="green_button">This is a green button</string>
    <string name="scrollview_text">ScrollView: A view group that allows the view hierarchy placed within it to be scrolled. Scroll view may have only one direct child placed within it. To add multiple views within the scroll view, make the direct child you add a view group, for example LinearLayout and place additional views within that LinearLayout.</string>
    <string name="spinner_example">Spinner Example</string>
    <string name="spinner_prompt">Choose an Android version</string>
    <string name="login">login</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="submit">Submit</string>
    <string name="terms_cond"><![CDATA[I accept T&C]]></string>
    <string name="remove_item">Remove item</string>
    <string name="title_activity_first">FirstActivity</string>
</resources>
